--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -354,6 +354,10 @@ button:active, input[type=submit]:active, .my-button:active {
     height: 95vh;
 }
 
+#workout-content {
+    padding-top: 30vh;
+}
+
 #workout-selection-container {
     display: inline-block;
     float: right;
