--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -80,17 +80,15 @@
 <div th:fragment="update-user">
     <h2>Please edit your details...</h2><br/>
     <!--/*@thymesVar id="user" type="java"*/-->
-    <form th:action="@{/update}" th:object="${user}" method="post">
+    <form th:action="@{/user/update}" th:object="${user}" method="post">
         <input type="hidden" th:field="*{id}"/>
         <p>Username: <input type="text" th:field="*{name}" autofocus="autofocus"/>
             <span th:if="${#fields.hasErrors('name')}" class="alert" th:errors="*{name}"></span></p>
         <p>Password: <input type="password" th:field="*{password}"/>
             <span th:if="${#fields.hasErrors('password')}" class="alert"
                   th:errors="*{password}"></span>
-            <button class="my-button" onclick="location.href='/wl/changepassword'"
-                    type="button">
-                Change password
-            </button>
+            <button class="my-button" onclick="location.href='/wl/user/changepassword'"
+                    type="button">Change password</button>
         <p>Email: <input type="text" th:field="*{email}"/>
             <span th:if="${#fields.hasErrors('email')}" class="alert" th:errors="*{email}"></span>
             <!--/*@thymesVar id="emailExists" type="java"*/-->
@@ -112,7 +110,7 @@
 <div th:fragment="change-password">
     <h2>Please enter and confirm both current and new passwords...</h2><br/>
     <!--/*@thymesVar id="changePassword" type="java"*/-->
-    <form th:action="@{/changepassword}" th:object="${changePassword}" method="post">
+    <form th:action="@{/user/changepassword}" th:object="${changePassword}" method="post">
         <p>Current password: <input type="password" th:field="*{oldPassword}"
                                     autofocus="autofocus"/>
             <span th:if="${#fields.hasErrors('oldPassword')}" class="alert"
@@ -127,7 +125,8 @@
             <span th:if="${#fields.hasErrors('confirmNewPassword')}" class="alert"
                   th:errors="*{confirmNewPassword}"></span></p>
         <input type="submit" value="Change password">
-        <button class="my-button" onclick="location.href='/wl/update'" type="button">Cancel</button>
+        <button class="my-button" onclick="location.href='/wl/user/update'" type="button">Cancel
+        </button>
     </form>
 </div>
 
@@ -146,7 +145,7 @@
 <!--Password change successful-->
 <div th:fragment="change-password-success">
     <h2>New password has been set!</h2><br/>
-    <button class="my-button" onclick="location.href='/wl/update'" type="button">OK</button>
+    <button class="my-button" onclick="location.href='/wl/user/update'" type="button">OK</button>
 </div>
 
 <!--User panel-->
@@ -154,7 +153,7 @@
     <div id="workout-content-container" class="col">
         <div id="workout-content">
             <h2>Select existing workout from the panel to the right or...</h2>
-            <button class="my-button" onclick="location.href='/wl/addworkout'" type="button">
+            <button class="my-button" onclick="location.href='/wl/workout/add'" type="button">
                 Add new workout</button>
         </div>
     </div>
@@ -165,8 +164,8 @@
             <button class="same-row my-button" onclick="location.href='/wl/logout'"
                     type="button">Log out
             </button>
-            <button class="same-row my-button" onclick="location.href='/wl/user'"
-                    type="button">Back
+            <button class="same-row my-button" onclick="location.href='/wl/user/update'"
+                    type="button">Account
             </button>
             <!--/*@thymesVar id="adminRights" type="java"*/-->
             <button th:if="${adminRights}" class="same-row my-button"
