Add workout rest controller draft

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -173,6 +173,8 @@
         </div>
         <br/>
         <p>Lorem ipsum dolor sit amet.</p>
+        <script>getWorkoutsList();</script>
+        <div id="workouts-list"></div>
     </div>
 
     <!-- JS code for smooth column size adjustment -->
