--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -354,7 +354,7 @@ button:active, input[type=submit]:active, .my-button:active {
     height: 95vh;
 }
 
-#workout-content {
+.workout-content {
     padding-top: 30vh;
 }
 
