--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -215,8 +215,21 @@
 
 <!-- user panel fragments - add new workout-->
 <div th:fragment="user-panel-add-workout" class="workout-content">
-    <h2>Future add workout functionality!</h2>
-    <button class="my-button" onclick="location.href='/wl/workout/add'" type="button">
+    <label for="title">Workout title: </label>
+    <input type="text" name="title" id="title" size="20" value=""/>
+    <label for="created">Created: </label>
+    <input type="text" name="created" id="created" value=""/>
+    <button class="my-button" onclick="addWorkoutNote();">Add workout note</button>
+    <button class="my-button" onclick="addExercise();">Add exercise</button>
+    <script>buildWorkout();</script>
+    <button class="my-button" onclick="location.href='/wl/user'" type="button">
+        Save workout</button>
+</div>
+
+<!-- user panel fragments - update existing workout-->
+<div th:fragment="user-panel-update-workout" class="workout-content">
+    <h2>Future update workout functionality!</h2>
+    <button class="my-button" onclick="location.href='/wl/user'" type="button">
         Save workout</button>
 </div>
 
