--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,8 @@
 <body>
 <div id="main-container">
     <div id="top-container">
-        <div id="logo-container" style="display: block;">
+        <div id="logo-container" onclick="location.href = 'http://localhost:8080/wl/'"
+             style="display: block;">
 
             <!--Title and logo section-->
             <p>
