--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -237,10 +237,9 @@
     <input type="text" name="title" id="title" minlength="20" value="" autofocus="autofocus"/>
     <label for="created">Created: </label>
     <input type="text" name="created" id="created" value=""/>
+    <button class='my-button handwriting' onclick='addNote();'>&nbsp</button>
     <br/>
     <div id="workout-notes"></div>
-    <br/>
-    <button class="my-button" onclick="addNote();">Add workout note</button>
     <br/>
     <div id="workout-exercises"></div>
     <br/>
