Add changing workout, exercise and set data

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -234,9 +234,11 @@
 
     <br/><br/>
     <label for="title">Workout title: </label>
-    <input type="text" name="title" id="title" minlength="20" value="" autofocus="autofocus"/>
+    <input type="text" name="title" id="title" minlength="20" value="" autofocus="autofocus"
+        onchange="storeFieldValue('workout.title', this.value);"/>
     <label for="created">Created: </label>
-    <input type="text" name="created" id="created" value=""/>
+    <input type="text" name="created" id="created" value=""
+           onchange="storeFieldValue('workout.created', this.value);"/>
     <button class='my-button handwriting' onclick='addNote();'>&nbsp</button>
     <br/>
     <div id="workout-notes"></div>
@@ -254,7 +256,8 @@
             Cancel
         </button>
     </div>
-    <script>buildWorkout();</script>
+    <script>
+        buildWorkout();</script>
 </div>
 
 <!-- user panel fragments - update existing workout-->
