Modify "addNote" JS function
"addNote" function now adds all types of notes

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -241,9 +241,9 @@
            onchange="storeFieldValue('workout.created', this.value);"/>
     <button class='my-button handwriting' onclick='addNote();'>&nbsp</button>
     <br/>
-    <div id="workout-notes"></div>
+    <div id="notes"></div>
     <br/>
-    <div id="workout-exercises"></div>
+    <div id="exercises"></div>
     <br/>
     <button class="my-button" onclick="addExercise();">Add exercise</button>
     <br/><br/>
@@ -256,8 +256,7 @@
             Cancel
         </button>
     </div>
-    <script>
-        buildWorkout();</script>
+    <script>buildWorkout();</script>
 </div>
 
 <!-- user panel fragments - update existing workout-->
