--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -235,10 +235,10 @@
     <br/><br/>
     <label for="title">Workout title: </label>
     <input type="text" name="title" id="title" minlength="20" value="" autofocus="autofocus"
-        onchange="storeFieldValue('workout.title', this.value);"/>
+        onchange="storeFieldValue('workout.','title', '', this.value);"/>
     <label for="created">Created: </label>
     <input type="text" name="created" id="created" value=""
-           onchange="storeFieldValue('workout.created', this.value);"/>
+           onchange="storeFieldValue('workout.','created','', created);;"/>
     <button class='my-button handwriting' onclick='addNote();'>&nbsp</button>
     <br/>
     <div id="notes"></div>
