Add draft of "Save Workout" function

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -224,7 +224,7 @@
 <div th:fragment="user-panel-add-workout" class="workout-content">
     <br/>
     <div class="same-row">
-        <button class="my-button" onclick="location.href='/wl/user'" type="button">
+        <button class="my-button" onclick="saveWorkout(workout);" type="button">
             Save
         </button>
         <button class="my-button" onclick="location.href='/wl/user'" type="button">
@@ -249,7 +249,7 @@
     <br/><br/>
 
     <div class="same-row">
-        <button class="my-button" onclick="location.href='/wl/user'" type="button">
+        <button class="my-button" onclick="saveWorkout(workout);" type="button">
             Save
         </button>
         <button class="my-button" onclick="location.href='/wl/user'" type="button">
