--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -188,7 +188,7 @@
             </button>
         </div>
         <br/>
-        <p id="workouts-list"></p>
+        <div id="workouts-list"></div>
         <script>getWorkoutsList();</script>
     </div>
 
