Add workout list display feature in user view

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -355,6 +355,10 @@ button:active, input[type=submit]:active, .my-button:active {
     text-align: right;
 }
 
+#workouts-list {
+    margin: auto;
+}
+
 /* General text styling */
 .bigger-label {
     font-weight: bold;
