--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -87,9 +87,6 @@
         <p>Password: <input type="password" th:field="*{password}"/>
             <span th:if="${#fields.hasErrors('password')}" class="alert"
                   th:errors="*{password}"></span>
-            <button class="my-button" onclick="location.href='/wl/user/changepassword'"
-                    type="button">Change password
-            </button>
         <p>Email: <input type="text" th:field="*{email}"/>
             <span th:if="${#fields.hasErrors('email')}" class="alert" th:errors="*{email}"></span>
             <!--/*@thymesVar id="emailExists" type="java"*/-->
@@ -104,6 +101,8 @@
         <input type="hidden" th:field="*{role}"/>
         <input type="submit" value="Update user details">
         <button class="my-button" onclick="location.href='/wl/login'" type="button">Cancel</button>
+        <button class="my-button" onclick="location.href='/wl/user/changepassword'"
+                type="button">Change password</button>
     </form>
 </div>
 
@@ -146,7 +145,8 @@
 <!--Password change successful-->
 <div th:fragment="change-password-success">
     <h2>New password has been set!</h2><br/>
-    <button class="my-button" onclick="location.href='/wl/user/update'" type="button">OK</button>
+    <button class="my-button" onclick="window.location.pathname = 'wl/user/update';"
+            type="button">OK</button>
 </div>
 
 <!--Admin panel-->
@@ -192,7 +192,8 @@
             <!--/*@thymesVar id="workouts" type="java"*/-->
             <tr th:each="workout: ${workouts}">
                 <td>
-                    <button class="my-button"><th:block th:text="${workout.title}"/>
+                    <button class="my-button" onclick="alert('Edit workout!');">
+                        <th:block th:text="${workout.title}"/>
                         <br/><th:block th:text="${workout.created}"/></button>
                 </td>
             </tr>
