--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -159,7 +159,14 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 /* text, number, password input fields */
-input[type=text], input[type=number], input[type=password] {
+.my-input {
+    display: inline-block;
+    min-width: 20vw;
+    max-width: 90vw;
+    background-color: #FFFFFF;
+}
+
+input[type=text], input[type=number], input[type=password], .my-input {
     color: black;
     border: 2px solid #FF9200;
     box-shadow: 3px 3px 3px #472900;
